Add image qr code
